<resources>
    <string name="app_name">Luga Luga</string>
    <string name="hint_email">e-mail</string>
    <string name="text_esqueci">Esqueci minha senha</string>
    <string name="text_logar">Logar</string>
    <string name="hint_senha">senha</string>
    <string name="text_cadastro">Fazer cadastro</string>
    <string name="tv_produto">Nome Produto</string>
    <string name="tv_preco">R$ 00,00</string>
    <string name="tv_descricao">The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.</string>
    <string name="btn_aluga">Aluga</string>
    <string name="tv_quantidade">10 peças</string>

    <string name="input_nome_user">Nome</string>
    <string name="input_cpf_user">CPF</string>
    <string name="input_nascimento_user">Data de Nascimento</string>
    <string name="input_cep_user">CEP</string>
    <string name="input_cidade_user">Cidade</string>
    <string name="input_logradouro_user">Logradouro</string>
    <string name="input_numero_user">N°</string>
    <string name="input_complemento_user">Complemento</string>
    <string name="input_bairro_user">Bairro</string>
    <string name="input_email_user">Email</string>
    <string name="input_senha_user">Senha</string>
    <string name="btn_cadastrar">CADASTRAR</string>

    <string-array name="uf_cadastro">

        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>

    </string-array>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="text"> <B>Bem Vindo ao Luga Luga</B></string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Home">Home</string>
    <string name="produtos">Produtos</string>
    <string name="solicitação">Solicitação</string>
    <string name="acompanhamento">Acompanhamento</string>
    <string name="Atendimento">Atendimento</string>
    <string name="sobrenos">Sobre Nós</string>
    <string name="faleconosco">Fale Conosco</string>
</resources>