<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.ProdutoActivity"
   >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#0A2888"
        app:titleTextColor="@color/white"
        android:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar">
    <TextView
        android:id="@+id/nomeProdutoTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_produto"
        android:textSize="26dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/qtdProdutotv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_quantidade"
        android:textSize="26dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/produtoImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:srcCompat="@drawable/img_produto"
        app:layout_constraintTop_toBottomOf="@id/nomeProdutoTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/precoProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_preco"
        android:layout_marginStart="24dp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/produtoImg"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20dp"
        />

    <Button
        android:id="@+id/alugaBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_aluga"
        android:textSize="22dp"
        android:textAllCaps="true"
        android:backgroundTint="@color/blue_dark"
        app:layout_constraintTop_toBottomOf="@id/produtoImg"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="20dp"
        />
    <TextView
        android:id="@+id/descricaotv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_descricao"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@id/alugaBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>